# SofterWorldBrowser2

./: .gitignore  Dockerfile  LICENSE  README.md
app/: Cargo.toml
app/src/: main.rs
app/static/: index.html  main.js  style.css
