[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
cached = { version = "0.55.1", features = ["default", "async"] }
serde = { version = "1.0.219", features = ["derive"] }
reqwest = "0.12.15"
scraper = "0.23.1"
base64 = "0.22.1"
